--- a/app.yaml
+++ b/app.yaml
@@ -1,14 +1,15 @@
+#AppEngine config
+
 runtime: go114
 
 instance_class: B1
 
 env_variables:
     PORT: 8080
-##  BUCKET_NAME: "example-gcs-bucket"
 
 basic_scaling:
   max_instances: 10
-  idle_timeout: 5m
+  idle_timeout: 15m
 
 handlers:
   - url: /.*
